--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "node-db4-project",
   "version": "1.0.0",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "migrate": "knex migrate:latest",
+    "up": "knex migrate:up",
+    "down": "knex migrate:down",   
+    "rollback": "knex migrate:rollback",
+    "seed": "knex seed:run",
+    "resetdb": "npm run rollback && npm run migrate && npm run seed"
   },
   "repository": {
     "type": "git",
